--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,37 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline  # Name of the pipeline
 
 on:
   push:
     branches:
-      - main  # Triggers the pipeline on every push to the 'main' branch
+      - main  # This triggers the pipeline when code is pushed to the 'main' branch
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Specifies the OS for the runner
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2  # Checks out the code from the repository
+      uses: actions/checkout@v3  # Updated to version 3 to use Node.js 20
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3  # Updated to version 3
       with:
-        node-version: '16'  # Adjust to your programming language or framework
+        node-version: '20'  # Updated to use Node.js version 20
 
     - name: Install dependencies
-      run: npm install  # Install project dependencies (change to your package manager if needed)
+      run: npm install  # Runs the command to install your project's dependencies
 
     - name: Run tests
-      run: npm test  # Run tests (adjust this command based on your project's needs)
+      run: npm test  # Runs tests (replace with your test command if different)
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build  # Runs this job only if the 'build' job succeeds
-    if: success()  # Execute this job only if all previous jobs are successful
+    needs: build  # This job runs only after the 'build' job is successful
+    if: success()  # Only runs if all previous jobs have succeeded
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # Updated to version 3
 
     - name: Deploy to Staging
       env:
@@ -39,8 +39,8 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       run: |
         ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no user@${STAGING_SERVER} 'bash -s' << 'EOF'
-        cd /path/to/application
-        git pull origin main
+        cd /path/to/application  # Navigate to your application directory
+        git pull origin main  # Pull the latest code from the 'main' branch
         npm install --production  # Install only production dependencies
-        npm run start  # Replace with your application's start command
+        npm run start  # Start the application (replace with your start command)
         EOF
