--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # Trigger the pipeline on push to the 'main' branch
+      - main  # Triggers the pipeline on every push to the 'main' branch
 
 jobs:
   build:
@@ -11,38 +11,36 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3  # Updated to use Node.js 20
+      uses: actions/checkout@v2  # Checks out the code from the repository
 
     - name: Set up Node.js
-      uses: actions/setup-node@v3  # Updated to use Node.js 20
+      uses: actions/setup-node@v2
       with:
-        node-version: '20'  # Specify Node.js version 20 explicitly
+        node-version: '18'  # Adjust to your programming language or framework
 
     - name: Install dependencies
-      run: npm install  # Ensure you have a valid package.json file in the repo
+      run: npm install  # Install project dependencies (change to your package manager if needed)
 
     - name: Run tests
-      run: npm test  # Make sure you have a test script in your package.json
+      run: npm test  # Run tests (adjust this command based on your project's needs)
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
-    if: success()
+    needs: build  # Runs this job only if the 'build' job succeeds
+    if: success()  # Execute this job only if all previous jobs are successful
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Deploy to Staging
       env:
         STAGING_SERVER: ${{ secrets.STAGING_SERVER }}
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       run: |
-        echo "$SSH_PRIVATE_KEY" > private_key.pem
-        chmod 600 private_key.pem
-        ssh -i private_key.pem -o StrictHostKeyChecking=no user@${STAGING_SERVER} 'bash -s' << 'EOF'
-        cd /path/to/application  # Navigate to your application directory
-        git pull origin main  # Pull the latest code from the 'main' branch
+        ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no user@${STAGING_SERVER} 'bash -s' << 'EOF'
+        cd /path/to/application
+        git pull origin main
         npm install --production  # Install only production dependencies
-        npm run start  # Start the application (replace with your start command)
+        npm run start  # Replace with your application's start command
         EOF
